--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "LocationTracker",
   "short_name": "LocationTracker",
   "start_url": "index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#FFFFFF",
   "theme_color": "#000000",
   "icons": [
